syntax = "proto3";

package services ;
option go_package="./services";

import "gender.proto";
import "google/protobuf/timestamp.proto";

service Calculator {
    rpc Hello(HelloRequest) returns(HelloResponse);
    rpc Fibonacci(FibonacciRequest) returns(stream FibonacciResponse);
    rpc Average(stream AverageRequest) returns(AverageResponse);
    rpc Sum(stream SumRequest) returns(stream SumResponse);
}

message HelloRequest {
    string name = 1;
    google.protobuf.Timestamp created_date = 2 ;
}

message HelloResponse {
    string result = 1;
}

message FibonacciRequest {
    uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}

message AverageRequest {
    double number = 1;
}

message AverageResponse {
    double result = 1;
}

message SumRequest {
    int32 number = 1;
}
message SumResponse {
    int32 result = 1;
}


message Person {
    string name = 1;
    bool married = 2;
    int32 age = 3;
    Gender gender =4;
    repeated string phone_number = 5;
}